# symulacja_sieci_cpp

./: README.md
siec/: CMakeLists.txt
siec/include/: config.hpp  factory.hpp  helpers.hpp  nodes.hpp  package.hpp  reports.hpp  simulation.hpp  storage_types.hpp  types.hpp
siec/mocks/: nodes_mocks.hpp
siec/src/: factory.cpp  nodes.cpp  package.cpp  reports.cpp  simulation.cpp  storage_types.cpp
siec/test/: test_Factory.cpp  test_simulate.cpp
